--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,10 @@ repositories {
 		name = "Jitpack"
 		url "https://jitpack.io/"
 	}
+	maven {
+		name = "Glass"
+		url "https://maven.glass-launcher.net/repo/"
+	}
     mavenCentral()
 }
 
@@ -56,6 +60,8 @@ minecraft {
 }
 
 dependencies {
+	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
 	// fabric loader requires log4j, guava, and gson
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.8.1'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.1'
@@ -92,8 +98,6 @@ dependencies {
 	modImplementation "com.github.minecraft-cursed-legacy:cursed-fabric-loader:${project.loader_version}"
 
 	modImplementation "com.github.ModificationStation:StationAPI:${project.stapi_version}"
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
 
 }
