--- a/gradle.properties
+++ b/gradle.properties
@@ -3,12 +3,12 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-minecraft_version=b1.7.3
-yarn_mappings=00548e7
-loader_version=671a1bb
-stapi_version=611da88
+	minecraft_version=b1.7.3
+	yarn_mappings=8f39da9
+	loader_version=671a1bb
+	stapi_version=b66e7a1
 
 # Mod Properties
-	mod_version = 1.1.0
+	mod_version = 0.1
 	maven_group = kz.chesschicken
-	archives_base_name = Kotlin_StAPI-Example-Mod
+	archives_base_name = BetaHorses
