--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=b1.7.3
-	yarn_mappings=8f39da9
+	yarn_mappings=00548e7
 	loader_version=671a1bb
-	stapi_version=b66e7a1
+	stapi_version=2.0-PRE1
 
 # Mod Properties
 	mod_version = 0.1
